# megatt-tree

./: .gitignore  README.md  pyproject.toml
src/megatt_tree/: __main__.py  convert.py  leaves.py
