[project]
name = "megatt-tree"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "AcipenserSturio", email = "AcipenserSturio@users.noreply.github.com"},
]
dependencies = [
    "newick>=1.9.0",
    "pandas>=2.2.2",
]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "GPL-3.0"}


[tool.pdm]
distribution = true

[tool.pdm.scripts]
help = "python -m megatt_tree --help"
convert = "python -m megatt_tree --convert"
leaves = "python -m megatt_tree --leaves"
